bug fixes + cmds